# simple-graphics

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini  main.cpp  simple-graphics.code-workspace
include/: begin_code.h
resources/: lowpoly_city.mtl  lowpoly_city_triangulated.mtl  lowpoly_helicopter_triangulated.mtl
src/: main.cpp  model.hpp  pch.h  settings.hpp
src/core/: model.cpp  model.hpp  resource_manager.cpp  resource_manager.hpp  resource_manager_impl.hpp
src/shaders/: shader.frag  shader.vert
src/utils/: GL.cpp  GL.hpp  GL_impl.hpp  SDL.cpp  SDL.hpp  flip_vertical.cpp  flip_vertical.hpp  imgui.cpp  imgui.hpp  io.cpp  io.hpp  primitives.hpp  timer.cpp  timer.hpp
src/utils/parsers/: mtl_parser.hpp  mtl_parser_impl.hpp  obj_parser.hpp  obj_parser_impl.hpp  parsers.cpp  parsers.hpp
